--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,9 +25,10 @@
         <div class="container">
             <div class="well" ui-view="content"></div>
 
-            <div class="footer">
+<!--            <div class="footer">
                 <p translate="footer">This is your footer</p>
             </div>
+            -->
         </div>
 
         <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
