--- a/src/main/webapp/scripts/app/entities/produkt/produkts.html
+++ b/src/main/webapp/scripts/app/entities/produkt/produkts.html
@@ -61,17 +61,17 @@
                         <button type="submit"
                                 ui-sref="produkt.detail({id:produkt.id})"
                                 class="btn btn-info btn-sm">
-                            <span class="glyphicon glyphicon-eye-open"></span>&nbsp;<span translate="entity.action.view"> View</span>
+                            <span class="glyphicon glyphicon-eye-open"></span>&nbsp;<span translate="entity.action.view" class="btn-action"> View</span>
                         </button>
                         <button type="submit"
                                 ui-sref="produkt.edit({id:produkt.id})"
                                 class="btn btn-primary btn-sm">
-                            <span class="glyphicon glyphicon-pencil"></span>&nbsp;<span translate="entity.action.edit"> Edit</span>
+                            <span class="glyphicon glyphicon-pencil"></span>&nbsp;<span translate="entity.action.edit" class="btn-action"> Edit</span>
                         </button>
                         <button type="submit"
                                 ng-click="delete(produkt.id)"
                                 class="btn btn-danger btn-sm">
-                            <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span translate="entity.action.delete"> Delete</span>
+                            <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span translate="entity.action.delete" class="btn-action"> Delete</span>
                         </button>
                     </td>
                 </tr>
