--- a/src/main/webapp/scripts/app/entities/produkt/produkt-detail.html
+++ b/src/main/webapp/scripts/app/entities/produkt/produkt-detail.html
@@ -4,20 +4,14 @@
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
-            <tr>
+            <!-- <tr>
                 <th translate="entity.detail.field">Field</th>
                 <th translate="entity.detail.value">Value</th>
-            </tr>
+            </tr> -->
+            	<th translate="kucharzApp.produkt.name">Name</th>
+                <th>{{produkt.name}}</th>
             </thead>
             <tbody>
-            <tr>
-                <td>
-                    <span translate="kucharzApp.produkt.name">Name</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{produkt.name}}</span>
-                </td>
-            </tr>
             <tr>
                 <td>
                     <span translate="kucharzApp.produkt.miaraProduktu">miaraProduktu</span>
