--- a/src/main/webapp/scripts/app/entities/produkt/produkts.html
+++ b/src/main/webapp/scripts/app/entities/produkt/produkts.html
@@ -21,7 +21,7 @@
                         <h4 class="modal-title" translate="entity.delete.title">Confirm delete operation</h4>
                     </div>
                     <div class="modal-body">
-                        <p translate="kucharzApp.produkt.delete.question" translate-values="{id: '{{produkt.id}}'}">Are you sure you want to delete this Produkt?</p>
+                        <p translate="kucharzApp.produkt.delete.question" translate-values="{name: '{{produkt.name}}'}">Are you sure you want to delete this Produkt?</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
