--- a/src/main/webapp/scripts/app/entities/produkt/produkt-dialog.html
+++ b/src/main/webapp/scripts/app/entities/produkt/produkt-dialog.html
@@ -1,44 +1,66 @@
 
-<form name="editForm" role="form" novalidate ng-submit="save()">
+<form name="editForm" role="form" novalidate ng-submit="save()"
+	show-validation>
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
-                ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myProduktLabel" translate="kucharzApp.produkt.home.createOrEditLabel">Create or edit a Produkt</h4>
-    </div>
-    <div class="modal-body">
-        <jh-alert-error></jh-alert-error>
-        <!-- <div class="form-group">
-            <label for="id" translate="global.field.id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="produkt.id" readonly>
-        </div>-->
-        <div class="form-group">
-            <label translate="kucharzApp.produkt.name" for="field_name">Name</label>
-            <input type="text" class="form-control" name="name" id="field_name"
-                    ng-model="produkt.name"
-                    >
-        </div>
-
-        <div class="form-group">
-            <label translate="kucharzApp.produkt.miaraProduktu" for="field_miaraProduktu">miaraProduktu</label>
-            <select class="form-control" id="field_miaraProduktu" name="miaraProduktu" ng-model="produkt.miaraProduktu" ng-options="miaraProduktu as miaraProduktu.name for miaraProduktu in miaraproduktus track by miaraProduktu.name">
-                <option value=""></option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label translate="kucharzApp.produkt.rodzajProduktu" for="field_rodzajProduktu">rodzajProduktu</label>
-            <select class="form-control" id="field_rodzajProduktu" name="rodzajProduktu" ng-model="produkt.rodzajProduktu" ng-options="rodzajProduktu as rodzajProduktu.name for rodzajProduktu in rodzajproduktus track by rodzajProduktu.name">
-                <option value=""></option>
-            </select>
-        </div>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
-            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span translate="entity.action.cancel">Cancel</span>
-        </button>
-        <button type="submit" ng-disabled="editForm.$invalid || editForm.$submitted" class="btn btn-primary">
-            <span class="glyphicon glyphicon-save"></span>&nbsp;<span translate="entity.action.save">Save</span>
-        </button>
-    </div>
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal"
+			aria-hidden="true" ng-click="clear()">&times;</button>
+		<h4 class="modal-title" id="myProduktLabel"
+			translate="kucharzApp.produkt.home.createOrEditLabel">Create or
+			edit a Produkt</h4>
+	</div>
+	<div class="modal-body">
+		<jh-alert-error></jh-alert-error>
+		<div class="form-group">
+			<label translate="kucharzApp.produkt.name" for="field_name">Name</label>
+			<input type="text" class="form-control" name="name" id="field_name"
+				ng-model="produkt.name" ng-minlength=1 ng-maxlength=20
+				ng-pattern="/^[a-zA-Z0-9]*$/" required>
+			<div ng-show="form.name.$dirty && form.name.$invalid">
+				<p class="help-block" ng-show="form.name.$error.required"
+					translate="register.messages.validate.login.required">Your
+					username is required.</p>
+				<p class="help-block" ng-show="form.name.$error.minlength"
+					translate="register.messages.validate.login.minlength">Your
+					username is required to be at least 1 character.</p>
+				<p class="help-block" ng-show="form.name.$error.maxlength"
+					translate="register.messages.validate.login.maxlength">Your
+					username cannot be longer than 50 characters.</p>
+				<p class="help-block" ng-show="form.name.$error.pattern"
+					translate="register.messages.validate.login.pattern">Your
+					username can only contain lower-case letters and digits.</p>
+			</div>
+		</div>
+		<div class="form-group">
+			<label translate="kucharzApp.produkt.miaraProduktu"
+				for="field_miaraProduktu">miaraProduktu</label> <select
+				class="form-control" id="field_miaraProduktu" name="miaraProduktu"
+				ng-model="produkt.miaraProduktu"
+				ng-options="miaraProduktu as miaraProduktu.name for miaraProduktu in miaraproduktus track by miaraProduktu.name">
+				<option value=""></option>
+			</select>
+		</div>
+		<div class="form-group">
+			<label translate="kucharzApp.produkt.rodzajProduktu"
+				for="field_rodzajProduktu">rodzajProduktu</label> <select
+				class="form-control" id="field_rodzajProduktu" name="rodzajProduktu"
+				ng-model="produkt.rodzajProduktu"
+				ng-options="rodzajProduktu as rodzajProduktu.name for rodzajProduktu in rodzajproduktus track by rodzajProduktu.name">
+				<option value=""></option>
+			</select>
+		</div>
+	</div>
+	<div class="modal-footer">
+		<button type="button" class="btn btn-default" data-dismiss="modal"
+			ng-click="clear()">
+			<span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span
+				translate="entity.action.cancel">Cancel</span>
+		</button>
+		<button type="submit"
+			ng-disabled="editForm.$invalid || editForm.$submitted"
+			class="btn btn-primary">
+			<span class="glyphicon glyphicon-save"></span>&nbsp;<span
+				translate="entity.action.save">Save</span>
+		</button>
+	</div>
 </form>
