--- a/src/main/webapp/scripts/app/entities/produkt/produkt-dialog.html
+++ b/src/main/webapp/scripts/app/entities/produkt/produkt-dialog.html
@@ -18,17 +18,17 @@
 				ng-pattern="/^[a-zA-Z0-9]*$/" required>
 			<div ng-show="editForm.name.$dirty && editForm.name.$invalid">
 				<p class="help-block" ng-show="editForm.name.$error.required"
-					translate="kucharzApp.produkt.validate.name.required">Your
-					username is required.</p>
+					translate="kucharzApp.produkt.validate.name.required">Name is
+					required.</p>
 				<p class="help-block" ng-show="editForm.name.$error.minlength"
-					translate="kucharzApp.produkt.validate.name.minlength">Your
-					username is required to be at least 1 character.</p>
+					translate="kucharzApp.produkt.validate.name.minlength">Name is
+					required to be at least 1 character.</p>
 				<p class="help-block" ng-show="editForm.name.$error.maxlength"
-					translate="kucharzApp.produkt.validate.name.maxlength">Your
-					username cannot be longer than 50 characters.</p>
+					translate="kucharzApp.produkt.validate.name.maxlength">Name
+					cannot be longer than 50 characters.</p>
 				<p class="help-block" ng-show="editForm.name.$error.pattern"
-					translate="kucharzApp.produkt.validate.name.pattern">Your
-					username can only contain lower-case letters and digits.</p>
+					translate="kucharzApp.produkt.validate.name.pattern">Name can
+					only contain lower-case letters and digits.</p>
 			</div>
 		</div>
 		<div class="form-group">
@@ -36,18 +36,36 @@
 				for="field_miaraProduktu">miaraProduktu</label> <select
 				class="form-control" id="field_miaraProduktu" name="miaraProduktu"
 				ng-model="produkt.miaraProduktu"
-				ng-options="miaraProduktu as miaraProduktu.name for miaraProduktu in miaraproduktus track by miaraProduktu.name">
-				<option value=""></option>
+				ng-options="miaraProduktu as miaraProduktu.name for miaraProduktu in miaraproduktus track by miaraProduktu.name"
+				required>
+				<option value="" translate="kucharzApp.produkt.defaultMeasure">Select
+					measure</option>
 			</select>
+			<div
+				ng-show="editForm.miaraProduktu.$dirty && editForm.miaraProduktu.$invalid">
+				<p class="help-block"
+					ng-show="editForm.miaraProduktu.$error.required"
+					translate="kucharzApp.produkt.validate.miaraProduktu.required">Measure
+					is required.</p>
+			</div>
 		</div>
 		<div class="form-group">
 			<label translate="kucharzApp.produkt.rodzajProduktu"
 				for="field_rodzajProduktu">rodzajProduktu</label> <select
 				class="form-control" id="field_rodzajProduktu" name="rodzajProduktu"
 				ng-model="produkt.rodzajProduktu"
-				ng-options="rodzajProduktu as rodzajProduktu.name for rodzajProduktu in rodzajproduktus track by rodzajProduktu.name">
-				<option value=""></option>
+				ng-options="rodzajProduktu as rodzajProduktu.name for rodzajProduktu in rodzajproduktus track by rodzajProduktu.name"
+				required>
+				<option value="" translate="kucharzApp.produkt.defaultType">Select
+					type</option>
 			</select>
+			<div
+				ng-show="editForm.rodzajProduktu.$dirty && editForm.rodzajProduktu.$invalid">
+				<p class="help-block"
+					ng-show="editForm.rodzajProduktu.$error.required"
+					translate="kucharzApp.produkt.validate.rodzajProduktu.required">Type
+					is required.</p>
+			</div>
 		</div>
 	</div>
 	<div class="modal-footer">
