--- a/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
+++ b/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
@@ -9,7 +9,7 @@
             <h2>{{przepis.name}}</h2>
         </div>
         <div
-                style="width: 100%; border: 0px solid blue; display: inline-block;">
+            style="width: 100%; border: 0px solid blue; display: inline-block;">
             <div class="well" style="width: 20%; float: left;">
                 <div class="table-responsive">
                     <table class="table table-default">
@@ -42,14 +42,13 @@
                     <table class="table table-striped">
                         <tbody>
                         <tr ng-repeat="przepisDescription in przepis.przepisDescriptions track by przepisDescription.id">
-                            <td>{{przepisDescription.title}} {{przepisDescription.text}}</td>
+                            <td><h4>{{przepisDescription.title}}</h4>
+
+                                <p>{{przepisDescription.text}}</p></td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
-
-
-                <div class="well" style="width: 100%;">{{przepis.description}}</div>
             </div>
             <div style="width: 0%; float: left; padding-top: 5px;"/>
         </div>
@@ -115,6 +114,6 @@
     <button type="submit" onclick="window.history.back()"
             class="btn btn-info">
         <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span
-            translate="entity.action.back"> Back</span>
+        translate="entity.action.back"> Back</span>
     </button>
 </div>
