--- a/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
+++ b/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
@@ -4,6 +4,38 @@
         {{przepis.name}}
     </h2> -->
 
+    <div class="modal fade" id="deletePrzepisConfirmation">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form name="deleteForm" ng-submit="confirmDelete(przepis.id)">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"
+                                aria-hidden="true" ng-click="clear()">&times;</button>
+                        <h4 class="modal-title" translate="entity.delete.title">Confirm
+                            delete operation</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p translate="kucharzApp.przepis.delete.question"
+                           translate-values="{id: '{{przepis.id}}'}">Are you sure you
+                            want to delete this Przepis?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal"
+                                ng-click="clear()">
+                            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span
+                            translate="entity.action.cancel">Cancel</span>
+                        </button>
+                        <button type="submit" ng-disabled="deleteForm.$invalid"
+                                class="btn btn-danger">
+                            <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span
+                            translate="entity.action.delete">Delete</span>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <div>
         <div>
             <h2>{{przepis.name}}</h2>
@@ -111,9 +143,19 @@
         </table>
     </div> -->
 
-    <button type="submit" onclick="window.history.back()"
+    <button type="submit" ui-sref="przepis"
             class="btn btn-info">
         <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span
         translate="entity.action.back"> Back</span>
+    </button>
+    <button type="submit" ui-sref="przepis.edit({id:przepis.id})"
+            class="btn btn-primary btn-sm" has-authority="ROLE_ADMIN">
+        <span class="glyphicon glyphicon-pencil"></span>&nbsp;<span
+        translate="entity.action.edit"> Edit</span>
+    </button>
+    <button type="submit" ng-click="delete(przepis.id)"
+            class="btn btn-danger btn-sm" has-authority="ROLE_ADMIN">
+        <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span
+        translate="entity.action.delete"> Delete</span>
     </button>
 </div>
