--- a/src/main/webapp/scripts/app/entities/przepis/przepiss.html
+++ b/src/main/webapp/scripts/app/entities/przepis/przepiss.html
@@ -1,47 +1,57 @@
-<div>
-    <h2 translate="kucharzApp.przepis.home.title">Przepiss</h2>
-    <jh-alert></jh-alert>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <button class="btn btn-primary" ui-sref="przepis.new">
-                    <span class="glyphicon glyphicon-flash"></span> <span
-                    translate="kucharzApp.przepis.home.createLabel">Create a
+<img>
+<h2 translate="kucharzApp.przepis.home.title">Przepiss</h2>
+<jh-alert></jh-alert>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <button class="btn btn-primary" ui-sref="przepis.new">
+                <span class="glyphicon glyphicon-flash"></span> <span
+                translate="kucharzApp.przepis.home.createLabel">Create a
 						new Przepis</span>
-                </button>
-            </div>
+            </button>
         </div>
     </div>
+</div>
 
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th translate="kucharzApp.przepis.name">Name</th>
-                <th translate="kucharzApp.przepis.duration">Duration</th>
-                <th translate="kucharzApp.przepis.pracochlonnoscPrzepisu">pracochlonnoscPrzepisu</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="przepis in przepiss track by przepis.name">
-                <td><a ui-sref="przepis.detail({id:przepis.id})">{{przepis.name}}</a></td>
-                <td>{{przepis.duration}}</td>
-                <td>{{przepis.pracochlonnoscPrzepisu.name}}</td>
-                <td>
-                    <button type="submit" ui-sref="przepis.edit({id:przepis.id})"
-                            class="btn btn-primary btn-sm" has-authority="ROLE_ADMIN">
-                        <span class="glyphicon glyphicon-pencil"></span>&nbsp;<span
-                        translate="entity.action.edit"> Edit</span>
-                    </button>
-                    <button type="submit" ng-click="delete(przepis.id)"
-                            class="btn btn-danger btn-sm" has-authority="ROLE_ADMIN">
-                        <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span
-                        translate="entity.action.delete"> Delete</span>
-                    </button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+<!--<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th translate="kucharzApp.przepis.name">Name</th>
+            <th translate="kucharzApp.przepis.duration">Duration</th>
+            <th translate="kucharzApp.przepis.pracochlonnoscPrzepisu">pracochlonnoscPrzepisu</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="przepis in przepiss track by przepis.name">
+            <td><a ui-sref="przepis.detail({id:przepis.id})">{{przepis.name}}</a></td>
+            <td>{{przepis.duration}}</td>
+            <td>{{przepis.pracochlonnoscPrzepisu.name}}</td>
+            <td>
+                <button type="submit" ui-sref="przepis.edit({id:przepis.id})"
+                        class="btn btn-primary btn-sm" has-authority="ROLE_ADMIN">
+                    <span class="glyphicon glyphicon-pencil"></span>&nbsp;<span
+                    translate="entity.action.edit"> Edit</span>
+                </button>
+                <button type="submit" ng-click="delete(przepis.id)"
+                        class="btn btn-danger btn-sm" has-authority="ROLE_ADMIN">
+                    <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span
+                    translate="entity.action.delete"> Delete</span>
+                </button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>-->
+
+<div class="row">
+    <img src="https://placehold.it/350x150" style="padding: 2px;" class="col-xs-12 col-sm-6 col-lg-6"/>
+    <img src="https://placehold.it/350x150" style="padding: 2px;" class="col-xs-12 col-sm-6 col-lg-6"/>
+    <img src="https://placehold.it/350x150" style="padding: 2px;" class="col-xs-6 col-sm-4"/>
+    <img src="https://placehold.it/350x150" style="padding: 2px;" class="col-xs-6 col-sm-4"/>
+    <img src="https://placehold.it/350x150" style="padding: 2px;" class="col-xs-6 col-sm-4"/>
+    <img src="https://placehold.it/350x150" style="padding: 2px;" class="col-xs-6 col-sm-4"/>
+</div>
+
 </div>
