--- a/src/main/webapp/scripts/app/entities/przepis/przepis-dialog.html
+++ b/src/main/webapp/scripts/app/entities/przepis/przepis-dialog.html
@@ -15,31 +15,10 @@
         </div>
 
         <div class="form-group">
-            <div class="span4">
-                <div class="fileupload fileupload-new" data-provides="fileupload">
-                    <div class="input-append">
-                        <div class="uneditable-input span3">
-                            <i class="icon-file fileupload-exists"></i>
-                            <span class="fileupload-preview" ng-model="userType"></span>
-                        </div>
-                <span class="btn btn-file">
-                    <span class="fileupload-new">Select file</span>
-                    <span class="fileupload-exists">Change</span>
-                    <!--<input type="file" name="file" />-->
-                    <input type="file" ng-model="upFile"
-                           onchange="angular.element(this).scope().setFileEventListener(this)"/>
-                </span>
-                        <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
-                    </div>
-                </div>
-            </div>
-            <div class="span2">
-                <button type="submit" value="Send" id="btnStartUpload" class="btn start" ng-click="uploadFile()"
-                        ng-disabled="!upload_button_state">
-                    <i class="icon-upload"></i>
-                    <span>Upload File</span>
-                </button>
-            </div>
+            <label translate="kucharzApp.przepis.duration" for="file">Duration</label>
+            <span class="btn btn-default btn-file">
+                Browse <input type="file" id="file" name="file">
+            </span>
         </div>
 
         <div class="form-group">
