Zmiana sposobu zapisu plikow

--- a/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
+++ b/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
@@ -39,6 +39,7 @@
     <div>
         <div>
             <h2>{{przepis.name}}</h2>
+            <img ng-src="data:image/PNG;base64,{{dupa.test}}">
         </div>
         <div
             style="width: 100%; border: 0px solid blue; display: inline-block;">
