--- a/src/main/webapp/scripts/app/entities/przepis/przepiss.html
+++ b/src/main/webapp/scripts/app/entities/przepis/przepiss.html
@@ -39,6 +39,13 @@
                             </div>
                             <span class="przepiss-entry-description">{{divide(przepis.duration)}}</span>
                         </div>
+
+                        <div class="przepiss-entry">
+                            <div class="przepiss-entry-img-container">
+                                <img class="przepiss-entry-img" src="/assets/images/cooking-pot.png">
+                            </div>
+                            <span class="przepiss-entry-description">{{przepis.category}}</span>
+                        </div>
                     </div>
 
                     <div class="entry_title">
