--- a/src/main/webapp/scripts/app/entities/przepisProdukt/przepisProdukts.html
+++ b/src/main/webapp/scripts/app/entities/przepisProdukt/przepisProdukts.html
@@ -1,12 +1,12 @@
 <div>
-    <h2 translate="kucharzApp.przepisProdukt.home.title">PrzepisProdukts</h2>
+    <h2 translate="kucharzApp.przepisPartProdukt.home.title">PrzepisProdukts</h2>
     <jh-alert></jh-alert>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <button class="btn btn-primary" ui-sref="przepisProdukt.new">
+                <button class="btn btn-primary" ui-sref="przepisPartProdukt.new">
                     <span class="glyphicon glyphicon-flash"></span> <span
-                    translate="kucharzApp.przepisProdukt.home.createLabel">Create a new PrzepisProdukt</span>
+                    translate="kucharzApp.przepisPartProdukt.home.createLabel">Create a new PrzepisProdukt</span>
                 </button>
             </div>
         </div>
@@ -15,15 +15,15 @@
     <div class="modal fade" id="deletePrzepisProduktConfirmation">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form name="deleteForm" ng-submit="confirmDelete(przepisProdukt.id)">
+                <form name="deleteForm" ng-submit="confirmDelete(przepisPartProdukt.id)">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                                 ng-click="clear()">&times;</button>
                         <h4 class="modal-title" translate="entity.delete.title">Confirm delete operation</h4>
                     </div>
                     <div class="modal-body">
-                        <p translate="kucharzApp.przepisProdukt.delete.question"
-                           translate-values="{id: '{{przepisProdukt.id}}'}">Are you sure you want to delete this
+                        <p translate="kucharzApp.przepisPartProdukt.delete.question"
+                           translate-values="{id: '{{przepisPartProdukt.id}}'}">Are you sure you want to delete this
                             PrzepisProdukt?</p>
                     </div>
                     <div class="modal-footer">
@@ -46,36 +46,37 @@
             <thead>
             <tr>
                 <th translate="global.field.id">ID</th>
-                <th translate="kucharzApp.przepisProdukt.quantity">Quantity</th>
-                <th translate="kucharzApp.przepisProdukt.produkt">produkt</th>
-                <th translate="kucharzApp.przepisProdukt.przepis">przepis</th>
+                <th translate="kucharzApp.przepisPartProdukt.quantity">Quantity</th>
+                <th translate="kucharzApp.przepisPartProdukt.produkt">produkt</th>
+                <th translate="kucharzApp.przepisPartProdukt.przepis">przepis</th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="przepisProdukt in przepisProdukts track by przepisProdukt.id">
-                <td><a ui-sref="przepisProdukt.detail({id:przepisProdukt.id})">{{przepisProdukt.id}}</a></td>
-                <td>{{przepisProdukt.quantity}}</td>
+            <tr ng-repeat="przepisPartProdukt in przepisPartProdukts track by przepisPartProdukt.id">
+                <td><a ui-sref="przepisPartProdukt.detail({id:przepisPartProdukt.id})">{{przepisPartProdukt.id}}</a>
+                </td>
+                <td>{{przepisPartProdukt.quantity}}</td>
                 <td>
-                    <a ui-sref="produkt.detail({id:przepisProdukt.produkt.id})">{{przepisProdukt.produkt.id}}</a>
+                    <a ui-sref="produkt.detail({id:przepisPartProdukt.produkt.id})">{{przepisPartProdukt.produkt.id}}</a>
                 </td>
                 <td>
-                    <a ui-sref="przepis.detail({id:przepisProdukt.przepis.id})">{{przepisProdukt.przepis.id}}</a>
+                    <a ui-sref="przepis.detail({id:przepisPartProdukt.przepis.id})">{{przepisPartProdukt.przepis.id}}</a>
                 </td>
                 <td>
                     <button type="submit"
-                            ui-sref="przepisProdukt.detail({id:przepisProdukt.id})"
+                            ui-sref="przepisPartProdukt.detail({id:przepisPartProdukt.id})"
                             class="btn btn-info btn-sm">
                         <span class="glyphicon glyphicon-eye-open"></span>&nbsp;<span translate="entity.action.view"> View</span>
                     </button>
                     <button type="submit"
-                            ui-sref="przepisProdukt.edit({id:przepisProdukt.id})"
+                            ui-sref="przepisPartProdukt.edit({id:przepisPartProdukt.id})"
                             class="btn btn-primary btn-sm">
                         <span class="glyphicon glyphicon-pencil"></span>&nbsp;<span
                         translate="entity.action.edit"> Edit</span>
                     </button>
                     <button type="submit"
-                            ng-click="delete(przepisProdukt.id)"
+                            ng-click="delete(przepisPartProdukt.id)"
                             class="btn btn-danger btn-sm">
                         <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span
                         translate="entity.action.delete"> Delete</span>
