--- a/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
+++ b/src/main/webapp/scripts/app/entities/przepis/przepis-detail.html
@@ -41,10 +41,9 @@
             <h2>{{przepis.name}}</h2>
             <img ng-src="data:image/PNG;base64,{{dupa.test}}">
         </div>
-        <div
-            style="width: 100%; border: 0px solid blue; display: inline-block;">
-            <div class="well" style="width: 20%; float: left;">
-                <div class="table-responsive">
+        <div>
+            <div class="przepis-detail-left">
+                <div>
                     <table class="table table-default">
                         <thead>
                         <tr>
@@ -65,8 +64,8 @@
                     </table>
                 </div>
             </div>
-            <div class="well" style="width: 80%; float: left;">
-                <div class="well" style="width: 100%; display: inline-block">
+            <div class="przepis-detail-right">
+                <div style="width: 100%; display: inline-block">
                     <div style="width: 33%; float: left; text-align: center;">
                         {{przepis.pracochlonnoscPrzepisu.name}}
                     </div>
@@ -77,7 +76,7 @@
                         {{przepis.kategoriaPrzepisu.name}}
                     </div>
                 </div>
-                <div class="table-responsive">
+                <div>
                     <table class="table table-striped">
                         <tbody>
                         <tr ng-repeat="przepisPart in przepis.przepisParts track by przepisPart.id">
