--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css assets/styles/vendor.css -->
     <!-- bower:css -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -23,8 +24,8 @@
 <![endif]-->
 <div ng-show="{{ENV === 'dev'}}" class="development" ng-cloak=""></div>
 <div ui-view="navbar" ng-cloak=""></div>
-<div class="container index-container">
-    <div class="row">
+<div>
+    <div>
         <!--
                 <div class="col-lg-3 col-md-3 col-sm-4" ui-view="navbar-left" ng-cloak="" ng-show="isAuthenticated()"></div>
         -->
